[add] bacground layout

--- a/milestone-1/index.html
+++ b/milestone-1/index.html
@@ -6,11 +6,16 @@
     <meta name="viewport" content="width={device-widh}, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <script src="https://unpkg.com/vue@3"></script>
-    <title>Document</title>
+    <title>Vue Boolzapp </title>
 </head>
 <body>
     <div id="app">
-        <h1>{{msg}}</h1>
+        <div class="wrapper">
+            <div class="top-bar custom-green"></div>
+            <div class="chat-wrapper">
+            </div>
+
+        </div>
     </div>
     <script src="js/script.js"></script>
 </body>
