--- a/milestone-1/index.html
+++ b/milestone-1/index.html
@@ -6,13 +6,29 @@
     <meta name="viewport" content="width={device-widh}, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <script src="https://unpkg.com/vue@3"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Vue Boolzapp </title>
 </head>
 <body>
     <div id="app">
         <div class="wrapper">
-            <div class="top-bar custom-green"></div>
             <div class="chat-wrapper">
+                <div class="chat-header">
+                    <div class="left">
+                        <div class="profile-img">
+                            <img src="../img/avatar_1.jpg" alt="">
+                            <div class="name">
+                                <p>Sofia</p>
+                            </div>
+                        </div>
+                    
+                    </div>
+                    <div class="right"></div>
+                </div>
+                <div class="chat-main">
+                    <div class="left"></div>
+                    <div class="right"></div>
+                </div>
             </div>
 
         </div>
