--- a/milestone-1/index.html
+++ b/milestone-1/index.html
@@ -21,9 +21,27 @@
                                 <p>Sofia</p>
                             </div>
                         </div>
-                    
+                        <div class="icons">
+                            <i class="fa-solid fa-circle-notch"></i>
+                            <i class="fa-solid fa-message"></i>
+                            <i class="fa-solid fa-ellipsis-vertical"></i>
+                        </div>
                     </div>
-                    <div class="right"></div>
+                    <div class="right">
+                        <div class="profile-img">
+                            <img src="../img/avatar_2.jpg" alt="">
+                            <div class="name">
+                                <p>Michele</p>
+                                <p class="date">Ultimo accesso oggi alle 12:00</p>
+                            </div>
+                        </div>
+
+                            <div class="icons">
+                                <i class="fa-solid fa-magnifying-glass"></i>
+                                <i class="fa-solid fa-paperclip"></i>
+                                <i class="fa-solid fa-ellipsis-vertical"></i>
+                            </div>
+                    </div>
                 </div>
                 <div class="chat-main">
                     <div class="left"></div>
