--- a/milestone-1/index.html
+++ b/milestone-1/index.html
@@ -143,7 +143,61 @@
                             
                         </div>
                     </div>
-                    <div class="right"></div>
+                    <div class="right">
+                        <div class="chat">
+                            <div class="msg sent">
+                                <p>inviato</p>
+                                <p class="time">12.45</p>
+                            </div>
+                            <div class="msg received">
+                                <p>ricevuto</p>
+                                <p class="time">12.45</p>
+                            </div>
+                            <div class="msg sent">
+                                <p>inviato</p>
+                                <p class="time">12.45</p>
+                            </div>
+                            <div class="msg received">
+                                <p>ricevuto</p>
+                                <p class="time">12.45</p>
+                            </div>
+                            <div class="msg sent">
+                                <p>inviato</p>
+                                <p class="time">12.45</p>
+                            </div>
+                            <div class="msg received">
+                                <p>ricevuto</p>
+                                <p class="time">12.45</p>
+                            </div>
+                            <div class="msg sent">
+                                <p>inviato</p>
+                                <p class="time">12.45</p>
+                            </div>
+                            <div class="msg received">
+                                <p>ricevuto</p>
+                                <p class="time">12.45</p>
+                            </div>
+                            <div class="msg sent">
+                                <p>inviato</p>
+                                <p class="time">12.45</p>
+                            </div>
+                            <div class="msg received">
+                                <p>ricevuto</p>
+                                <p class="time">12.45</p>
+                            </div>
+                            <div class="msg sent">
+                                <p>inviato</p>
+                                <p class="time">12.45</p>
+                            </div>
+                            <div class="msg received">
+                                <p>ricevutoultimo</p>
+                                <p class="time">12.45</p>
+                            </div>
+
+                            <div id="msg-anchor"></div>
+                        </div>
+                        <div class="send-msg"></div>
+                    </div>
                 </div>
             </div>
 
