[fix] date in html contact

--- a/milestone-2/index.html
+++ b/milestone-2/index.html
@@ -76,7 +76,7 @@
                                 </div>
                                 
                                 <div class="time">
-                                    <p>12.45</p>
+                                    <p>{{getLastTime(index)}}</p>
                                 </div>
                             </div> 
                             
