[add] function to delete messages from html

--- a/milestone-5/index.html
+++ b/milestone-5/index.html
@@ -107,7 +107,8 @@
                                 </i>
                                 <div class="drop-down">
                                     <div class="option">
-                                        <div class="delete">delete</div>
+                                        <div class="delete"
+                                        @click="deleteMsg(index)">delete</div>
                                         <div class="info">info</div>
                                     </div>
                                 </div>
